fix: update margin on header on mobile for featured post

--- a/apps/laudebugs/src/components/featured.module.scss
+++ b/apps/laudebugs/src/components/featured.module.scss
@@ -65,13 +65,16 @@
     flex-direction: column-reverse;
     .content {
       width: 100%;
+      h5 {
+        margin-bottom: 0.5em;
+      }
       p.summary {
         margin-top: 0.35rem;
       }
     }
     .image {
       width: 100%;
-      height: 300px;
+      height: 180px;
     }
   }
 }
